[package]
name = "nb-serde-query"
version = "0.3.3"
edition = "2021"
description = "serialize and deserialize query string in url"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
actix-web = []

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
base64 = "0.21.5"
futures = "0.3.29"
hex = "0.4.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
